# Svbiox

./: README.md  electron-builder.json  electron.js  index.html  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: LoginForm.tsx  RainAnimation.tsx  StockAlerts.tsx
src/components/admin/: AdminDashboard.tsx  AdminInventory.tsx  AdminReports.tsx  AdminSidebar.tsx  AdminSummary.tsx  CashierManagement.tsx
src/components/cashier/: CashierDashboard.tsx  CashierInventory.tsx  CashierReports.tsx  CashierSidebar.tsx  CustomerManager.tsx  ProductManager.tsx  PurchaseManager.tsx  SalesManager.tsx
src/components/ui/: date-picker-with-range.tsx  theme-toggle.tsx
src/contexts/: AuthContext.tsx
src/lib/: database.ts
src/pages/: Index.tsx
src/utils/: pdfGenerator.ts
